<resources>
    <string name="app_name">Tradinget</string>

    <string name="splashScreenTitle">Payment Managent App</string>
    <string name="splashScreenSubTitle">Tradinget</string>

    <string name="logoContentDescription">Tradinget</string>
    <string name="soldPackets">Sold packets</string>

    <!--    Backup and restore section-->
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backUpMessage">Backup your data to keep safe</string>

    <!--    Navigation toggle string-->
    <string name="open">Open</string>
    <string name="close">Close</string>


    <!--    Menu items-->
    <string name="home">Home</string>
    <string name="buyers">Buyers</string>
    <string name="sellers">Sellers</string>
    <string name="brokers">Brokers</string>
    <string name="inventory">Inventory</string>
    <string name="paymentSlip">Invoices</string>
    <string name="packet">Packets</string>
    <string name="invoiceSettings">Invoice settings</string>
    <string name="pendingPayments">Pending payments</string>
    <string name="backupAndRestore">Backup and restore</string>
    <string name="exit">Exit</string>
    <string name="done">Done</string>
    <string name="appSettings">App Settings</string>


    <!--    Hints-->

    <string name="paymentThisMonthHint">Total payment\nof this month</string>
    <string name="duePaymentHint">Due\npayment</string>
    <string name="totalInventoryWeightHint">Total\ninventory weight</string>
    <string name="totalInventoryValueHint">Total\ninventory value</string>
    <string name="overDueDateHint">Over\ndue date</string>
    <string name="underDueDateHint">Under\ndue date</string>
    <string name="name">Name</string>
    <string name="firmName">Firm name</string>
    <string name="mobileNumber">Mobile number</string>
    <string name="altMobileNumber">Alt mobile number</string>
    <string name="address">Address</string>
    <string name="gstNumber">GST number</string>
    <string name="panNumber">Pan number</string>
    <string name="orders">Orders</string>
    <string name="packetNumber">Packet number</string>
    <string name="packetName">Packet name</string>
    <string name="subPacketName">Sub packet no</string>
    <string name="sieve">Sieve</string>
    <string name="weight">Weight (cts)</string>
    <string name="soldWeight">Sold weight (cts)</string>
    <string name="remainingWeight">Remaining weight (cts)</string>
    <string name="rate">Rate</string>
    <string name="price">Price</string>
    <string name="code">Code</string>
    <string name="remark">Remark</string>
    <string name="packets">Packets</string>
    <string name="date">Date</string>
    <string name="dateTitle">Date:</string>
    <string name="dueDate">Due date</string>
    <string name="broker">Broker</string>
    <string name="brokerPercentage">Broker percentage[%]</string>
    <string name="brokerAmount">Broker amount</string>
    <string name="discountPercentage">Discount percentage[%]</string>
    <string name="discountAmount">Discount amount</string>
    <string name="paidAmount">Paid amount</string>
    <string name="ledgers">Ledgers</string>
    <string name="addPacket">Add packet</string>
    <string name="makeTransaction">Make Transaction</string>
    <string name="transactionType">Transaction type</string>
    <string name="paymentType">Payment type</string>
    <string name="stateType">State type</string>


    <string name="rupeeSign">₹</string>

    <!--    Transition-->
    <string name="nameTransition">nameTransition</string>
    <string name="mobileNumberTransition">mobileNumberTransition</string>
    <string name="altMobileNumberTransition">altMobileNumberTransition</string>
    <string name="packetNameTransition">packetNameTransition</string>
    <string name="weightTransition">weightTransition</string>
    <string name="priceTransition">priceTransition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="issueDate">Issue date:</string>
    <string name="amount">Amount</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="sellerDuePayment">Seller\ndue payment</string>
    <string name="totalSellerAmount">Total\nseller amount</string>
</resources>