<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_7sdp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_background"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_8sdp"
        >

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:gravity="center"
            android:transitionName="@string/nameTransition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/firmName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/firmName"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name"
            />

        <TextView
            android:id="@+id/mobileNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:gravity="start"
            android:text="@string/mobileNumber"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:transitionName="@string/mobileNumberTransition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/altMobileNumber"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/firmName"
            />

        <TextView
            android:id="@+id/altMobileNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/mobileNumber"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:transitionName="@string/altMobileNumberTransition"
            app:layout_constraintBottom_toBottomOf="@+id/mobileNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mobileNumber"
            app:layout_constraintTop_toTopOf="@+id/mobileNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>