<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_background"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:padding="@dimen/_10sdp"
    >

    <TextView
        android:id="@+id/ledgerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="342323"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:transitionName="@string/nameTransition"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="342323"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toStartOf="@id/dueDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ledgerId"
        />

    <TextView
        android:id="@+id/dueDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="342323"
        android:textColor="@color/white"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintTop_toTopOf="@id/date"
        app:layout_constraintBottom_toBottomOf="@id/date"
        />
    <TextView
        android:id="@+id/totalWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="342323"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toStartOf="@id/totalAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:transitionName="@string/weightTransition"
        />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="342323"
        android:textColor="@color/white"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/totalWeight"
        app:layout_constraintTop_toTopOf="@id/totalWeight"
        app:layout_constraintBottom_toBottomOf="@id/totalWeight"
        android:transitionName="@string/priceTransition"
        />
</androidx.constraintlayout.widget.ConstraintLayout>